TensorizedTrainingMethods/ApplyingCNN/CIFAR/ErrOut/Error_conv500ATCD3DCIFAR10.err
Loaded module: cuda/10.2
Loaded dependency [gcc/8.4.0]: binutils/2.34
Loaded dependency [python3/3.8.2]: gcc/8.4.0
Loaded module: python3/3.8.2
  File "conv500ATCD3DCIFAR10.py", line 20
    trainloader, testloader = load_cifar()
                                         ^
IndentationError: unindent does not match any outer indentation level
Loaded module: cuda/10.2
Loaded dependency [gcc/8.4.0]: binutils/2.34
Loaded dependency [python3/3.8.2]: gcc/8.4.0
Loaded module: python3/3.8.2
